--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ httpx = "^0.27.0"
 python-dotenv = "^1.0.1"
 pydantic = "^2.10.0"
 pydantic-settings = "^2.6.0"
+elevenlabs = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
