chore: Update gitignore and add poetry.lock for reproducible builds
- Uncomment poetry.lock in .gitignore to enable reproducible dependency builds
- Add poetry.lock file with complete dependency tree for all project packages
- Expand .gitignore with additional patterns for Hypothesis testing, test outputs, Docker, and editor configurations
- Fix markdown formatting in upload-knowledge-page tasks documentation (double underscore to single)
- Ensure consistent development environment setup across team members

--- a/.gitignore
+++ b/.gitignore
@@ -50,10 +50,17 @@ htmlcov/
 Thumbs.db
 
 # Poetry
-poetry.lock
+# poetry.lock - Keep this commented out for now as it should be committed for reproducible builds
 
 # Streamlit
 .streamlit/secrets.toml
+
+# Hypothesis testing
+.hypothesis/
+
+# Test outputs
+test_output.txt
+*.test.log
 
 # Logs
 *.log
@@ -62,3 +69,11 @@ logs/
 # Temporary files
 tmp/
 temp/
+
+# Cloud/Docker
+.dockerignore
+docker-compose.override.yml
+
+# Editor/IDE specific
+*.sublime-project
+*.sublime-workspace
