feat(local-dev-infrastructure): Implement complete local development environment setup
- Add Docker Compose configuration with Firestore and GCS emulator services
- Create Firestore service wrapper with singleton pattern and emulator support
- Create Storage service wrapper with anonymous credentials for emulator
- Implement comprehensive Settings configuration class with environment variable support
- Add enhanced health check endpoint for Firestore and Storage service status
- Create platform-specific startup scripts (start_emulators.sh and start_emulators.bat)
- Update .env.example with organized configuration sections and documentation
- Add Streamlit sidebar component for improved UI navigation
- Implement integration and property-based tests for infrastructure validation
- Update project dependencies in pyproject.toml and poetry.lock
- Add LOCAL_DEVELOPMENT.md documentation with setup and usage instructions
- Update implementation roadmap with completed infrastructure tasks
- Enable developers to run full local development environment without cloud dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,31 @@
-# ElevenDops Environment Configuration
-# Copy this file to .env and fill in the values
+# ===========================================
+# ElevenDops Local Development Configuration
+# ===========================================
+# Copy this file to .env and update values as needed
 
-# Backend API Configuration
-BACKEND_API_URL=http://localhost:8000
+# ----- Firestore Configuration -----
+# Set to "true" for local development with emulator
+# Set to "false" for production Cloud Firestore
+USE_FIRESTORE_EMULATOR=true
+FIRESTORE_EMULATOR_HOST=localhost:8080
+GOOGLE_CLOUD_PROJECT=elevenlabs-local
 
-# ElevenLabs API Configuration
-ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+# ----- GCS Configuration -----
+# Set to "true" for local development with fake-gcs-server
+# Set to "false" for production Cloud Storage
+USE_GCS_EMULATOR=true
+GCS_EMULATOR_HOST=http://localhost:4443
+GCS_BUCKET_NAME=elevenlabs-audio
 
-# Google Cloud Configuration
-GOOGLE_CLOUD_PROJECT=your_gcp_project_id_here
+# ----- ElevenLabs Configuration -----
+# Required: Get your API key from https://elevenlabs.io
+# ELEVENLABS_API_KEY=your_api_key_here
 
-# Application Settings
-APP_ENV=development
+# ----- Application Configuration -----
 DEBUG=true
+LOG_LEVEL=INFO
+
+# ----- Server Configuration -----
+# STREAMLIT_PORT=8501
+# FASTAPI_PORT=8000
+# BACKEND_API_URL=http://localhost:8000
