--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-dotenv = "^1.0.1"
 pydantic = "^2.10.0"
 pydantic-settings = "^2.6.0"
 elevenlabs = "^1.0.0"
+google-cloud-storage = "^3.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
@@ -36,6 +37,9 @@ testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+markers = [
+    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
+]
 
 [tool.ruff]
 line-length = 100
