feat(firestore-data-service): Implement complete Firestore data service with mock data fallback
- Create FirestoreDataService class implementing DataServiceInterface for Firestore operations
- Add firestore_data_service.py with full CRUD operations for knowledge documents, audio files, and agents
- Implement helper conversion methods to transform Firestore documents to response models
- Update DataServiceInterface with abstract methods for all data operations
- Enhance MockDataService to support in-memory audio and agent storage with complete CRUD methods
- Add use_mock_data configuration option to enable in-memory mock data fallback
- Update data service factory function with logic to select between Firestore and mock implementations
- Add USE_MOCK_DATA environment variable to .env.example for local development configuration
- Archive local-dev-infrastructure specs to archieve-specs directory
- Add comprehensive test files for Firestore data service property validation and import debugging
- Update knowledge.py routes and patient_service.py to work with new data service interface
- Update firestore-data-service tasks.md to mark Phase 1 and Phase 2 items as complete

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@
 USE_FIRESTORE_EMULATOR=true
 FIRESTORE_EMULATOR_HOST=localhost:8080
 GOOGLE_CLOUD_PROJECT=elevenlabs-local
+# Set to "true" to use in-memory mock data (overrides Firestore settings if Emulator is false)
+USE_MOCK_DATA=false
 
 # ----- GCS Configuration -----
 # Set to "true" for local development with fake-gcs-server
