feat(elevenlabs-agent-creation): Implement real ElevenLabs agent creation with Firestore persistence
- Add ElevenLabs agent creation specification documents with design, requirements, and tasks
- Add ElevenLabs knowledge base specification documents for knowledge management
- Add ElevenLabs TTS audio specification documents for audio generation
- Add patient conversation text specification documents for text-based interactions
- Archive completed firestore-data-service and storage-service specifications
- Update AgentService to create agents in ElevenLabs and persist to Firestore
- Update ElevenLabsService with refined agent creation API integration
- Update FirestoreDataService with agent CRUD operations
- Update backend API routes to expose agent creation and management endpoints
- Update Streamlit frontend pages for knowledge upload and audio education
- Add comprehensive property-based tests for agent creation, audio service, data service, and storage service
- Add integration workflow tests for end-to-end feature validation
- Update project dependencies in pyproject.toml and poetry.lock
- Replaces mock/in-memory implementation with actual ElevenLabs API integration and persistent storage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pydantic = "^2.10.0"
 pydantic-settings = "^2.6.0"
 elevenlabs = "^1.0.0"
 google-cloud-storage = "^3.7.0"
+tenacity = "^9.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
