--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pydantic-settings = "^2.6.0"
 elevenlabs = "^1.0.0"
 google-cloud-storage = "^3.7.0"
 tenacity = "^9.1.2"
+websockets = "^15.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
