--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ elevenlabs = "^1.0.0"
 google-cloud-storage = "^3.7.0"
 tenacity = "^9.1.2"
 websockets = "^15.0.1"
+st-tailwind = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
