feat(script-generation): Implement AI-powered script generation with Gemini and LangGraph
- Add Google Gemini API integration with support for multiple model variants (2.5-pro, 2.5-flash, 2.0-flash)
- Implement LangGraph-based workflow for script generation with state management and error handling
- Create ScriptGenerationService with async script generation capabilities and model selection
- Add default script prompt configuration file with voice optimization guidelines for ElevenLabs
- Update AudioService to integrate script generation with custom prompt and model selection support
- Extend ScriptGenerateRequest schema with model_name and custom_prompt fields
- Extend ScriptGenerateResponse schema with model_used field for tracking generation metadata
- Add comprehensive test suites for script generation API and frontend integration
- Update environment configuration with Google API key support
- Add deployment plan documentation for production rollout
- Update dependencies in pyproject.toml and poetry.lock for Gemini and LangGraph support
- Enhance error handling in audio routes with specific 404 responses for missing documents

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,10 @@ GCS_BUCKET_NAME=elevenlabs-audio
 # Required: Get your API key from https://elevenlabs.io
 # ELEVENLABS_API_KEY=your_api_key_here
 
+# ----- Google AI Configuration -----
+# Required: Get your API key from https://aistudio.google.com/
+# GOOGLE_API_KEY=your_api_key_here
+
 # ----- Application Configuration -----
 DEBUG=true
 LOG_LEVEL=INFO
