--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ google-cloud-storage = "^3.7.0"
 tenacity = "^9.1.2"
 websockets = "^15.0.1"
 st-tailwind = "^1.3.0"
+langgraph = "^1.0.5"
+langchain-google-genai = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
