feat(langsmith-debug-integration): Complete LangSmith debugging infrastructure implementation
- Add LangSmith configuration to environment variables with API key and project settings
- Implement LangSmithTracer service for comprehensive workflow tracing and session management
- Create debug API routes with endpoints for script generation, trace retrieval, and session management
- Add langsmith-studio Node.js application for local LangSmith Studio integration and testing
- Implement trace level configuration (info, debug, warning) for flexible debugging control
- Add comprehensive property-based tests for tracing, graceful degradation, and error capture
- Update LangGraph workflow service to integrate LangSmith tracing capabilities
- Expand .gitignore to exclude Node.js artifacts, debug logs, and test outputs
- Add detailed documentation for debug API, LangSmith integration, and quick reference guide
- Update main application configuration and startup scripts to support debug endpoints
- Include performance timing collection and session persistence functionality
- Add integration test infrastructure for Studio connectivity and end-to-end workflow validation

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,13 @@ GCS_BUCKET_NAME=elevenlabs-audio
 # Required: Get your API key from https://aistudio.google.com/
 # GOOGLE_API_KEY=your_api_key_here
 
+# ----- LangSmith Configuration -----
+# Optional: Get your API key from https://smith.langchain.com/
+# LANGSMITH_API_KEY=your_langsmith_api_key_here
+LANGSMITH_PROJECT=elevendops-langgraph-debug
+LANGSMITH_TRACING_ENABLED=true
+LANGSMITH_TRACE_LEVEL=info
+
 # ----- Application Configuration -----
 DEBUG=true
 LOG_LEVEL=INFO
