--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ websockets = "^15.0.1"
 st-tailwind = "^1.3.0"
 langgraph = "^1.0.5"
 langchain-google-genai = "^2.0.0"
+langsmith = ">=0.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
