--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,41 +1,43 @@
-[tool.poetry]
+[project]
 name = "elevendops"
 version = "0.1.0"
 description = "ElevenDops - Intelligent Medical Assistant System integrating ElevenLabs voice technology"
-authors = ["ElevenDops Team"]
 readme = "README.md"
-packages = [
-    { include = "backend" },
-    { include = "streamlit_app" }
+requires-python = ">=3.10,<4.0"
+
+dependencies = [
+    "streamlit>=1.40.0",
+    "fastapi>=0.115.0",
+    "uvicorn>=0.32.0",
+    "google-cloud-firestore>=2.19.0",
+    "httpx>=0.27.0",
+    "python-dotenv>=1.0.1",
+    "pydantic>=2.10.0",
+    "pydantic-settings>=2.6.0",
+    "elevenlabs>=1.0.0",
+    "google-cloud-storage>=3.7.0",
+    "tenacity>=9.1.2",
+    "websockets>=15.0.1",
+    "st-tailwind>=1.3.0",
+    "langgraph>=1.0.5",
+    "langchain-google-genai>=4.0.0",
+    "langsmith>=0.1.0",
+    "zstandard>=0.25.0",
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-streamlit = "^1.40.0"
-fastapi = "^0.115.0"
-uvicorn = "^0.32.0"
-google-cloud-firestore = "^2.19.0"
-httpx = "^0.27.0"
-python-dotenv = "^1.0.1"
-pydantic = "^2.10.0"
-pydantic-settings = "^2.6.0"
-elevenlabs = "^1.0.0"
-google-cloud-storage = "^3.7.0"
-tenacity = "^9.1.2"
-websockets = "^15.0.1"
-st-tailwind = "^1.3.0"
-langgraph = "^1.0.5"
-langchain-google-genai = "^2.0.0"
-langsmith = ">=0.1.0"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.0"
-pytest-asyncio = "^0.24.0"
-hypothesis = "^6.115.0"
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.3.0",
+    "pytest-asyncio>=0.24.0",
+    "hypothesis>=6.115.0",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["backend", "streamlit_app"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
