--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "langchain-google-genai>=4.0.0",
     "langsmith>=0.1.0",
     "zstandard>=0.25.0",
+    "streamlit-sortables>=0.3.1",
 ]
 
 [project.optional-dependencies]
