feat: implement core backend services, API routes, Streamlit UI, and extensive property-based tests for agent setup, audio processing, and patient conversations.

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,6 @@ docker-compose.override.yml
 
 # Server management
 .server_jobs.json
+
+# Emulator data persistence (local development)
+emulator-data/
