docs: Add comprehensive learning materials and development guides for GCP and Firebase services, including a Firestore connectivity test.

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,7 @@ LANGSMITH_TRACE_LEVEL=info
 # ----- Application Configuration -----
 DEBUG=true
 LOG_LEVEL=INFO
+EMULATOR_DATA_PATH=./emulator-data
 
 # ----- Server Configuration -----
 # STREAMLIT_PORT=8501
