chore: improve repository security and update gitignore
- Add .env.env.bak, z-backup/, scripts/*.out, and failed_tests_summary.txt to .gitignore
- Remove sensitive test output file from tracking
- Prevent accidental commit of service account keys and API secrets
- Update .env.example and documentation for IAM configuration

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ FIRESTORE_EMULATOR_HOST=localhost:8080
 
 # Set your Project ID (Use a dummy ID for local emulator)
 GOOGLE_CLOUD_PROJECT=elevendops-local
+# (Optional) Service Account Key path for Signed URL testing in local dev
+# GOOGLE_APPLICATION_CREDENTIALS=C:\path\to\your\service-account-key.json
 
 # (Optional) Set to "true" to use in-memory mock data (overrides Firestore settings)
 USE_MOCK_DATA=false
