--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -24,21 +24,21 @@ spec:
       # Concurrency and timeout settings
       containerConcurrency: 80
       timeoutSeconds: 300
-      
+
       # Service account for IAM permissions (Requirement 4.3)
       serviceAccountName: elevendops-sa@PROJECT_ID.iam.gserviceaccount.com
-      
+
       containers:
         - image: REGION-docker.pkg.dev/PROJECT_ID/elevendops/app:latest
           ports:
             - containerPort: 8080
-          
+
           # Resource limits (Requirement 4.2: minimum 2 CPU, 1GB memory)
           resources:
             limits:
               cpu: "2"
               memory: "1Gi"
-          
+
           # Environment variables
           env:
             - name: APP_ENV
@@ -46,7 +46,9 @@ spec:
             - name: GOOGLE_CLOUD_PROJECT
               value: "PROJECT_ID"
             - name: GCS_BUCKET_NAME
-              value: "elevendops-audio"
+              value: "elevendops-bucket"
+            - name: FIRESTORE_DATABASE_ID
+              value: "elevendops-db"
             - name: CORS_ORIGINS
               value: "https://elevendops-HASH-REGION.a.run.app,http://localhost:8000"
             - name: LANGSMITH_PROJECT
@@ -59,7 +61,9 @@ spec:
               value: "false"
             - name: BACKEND_API_URL
               value: "http://localhost:8000"
-            
+            - name: DEBUG
+              value: "false"
+
             # Secret references for API keys (Requirement 4.3)
             - name: ELEVENLABS_API_KEY
               valueFrom:
@@ -76,7 +80,7 @@ spec:
                 secretKeyRef:
                   name: langsmith-api-key
                   key: latest
-          
+
           # Startup probe - waits for backend to be ready (Requirement 4.5, 4.6)
           startupProbe:
             httpGet:
@@ -86,7 +90,7 @@ spec:
             periodSeconds: 5
             failureThreshold: 12
             timeoutSeconds: 5
-          
+
           # Liveness probe - ensures container stays healthy (Requirement 4.5)
           livenessProbe:
             httpGet:
