feat: introduce new Streamlit pages for knowledge, audio, agent, and patient features, with supporting backend configuration and Cloud Run deployment documentation.

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,8 @@ LANGSMITH_TRACE_LEVEL=info
 
 # ----- Application Configuration -----
 DEBUG=true
+# Enable demo mode for public demos (disables delete operations in UI)
+# DEMO_MODE=false
 LOG_LEVEL=INFO
 EMULATOR_DATA_PATH=./emulator-data
 
